--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,11 +16,9 @@
     <!-- Quyền chạy foreground service - cần quyền đặc biệt cho Android 14+ -->
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_CAMERA" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" android:minSdkVersion="33" />
     
-    <!-- Loại bỏ nếu không sử dụng -->
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC" />
-
     <application
         android:name=".FlashLightApp"
         android:allowBackup="true"
@@ -37,8 +35,8 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:configChanges="locale"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -49,8 +47,8 @@
         <activity
             android:name=".SettingsActivity"
             android:exported="false"
-            android:configChanges="locale"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:parentActivityName=".MainActivity" />
         
         <!-- LanguageActivity -->
         <activity
@@ -63,21 +61,22 @@
         <activity
             android:name=".screen.ScreenLightActivity"
             android:exported="false"
-            android:configChanges="orientation|screenSize|locale" />
+            android:screenOrientation="portrait"
+            android:parentActivityName=".MainActivity" />
         
         <!-- TextLightActivity -->
         <activity
             android:name=".textlight.TextLightActivity"
             android:exported="false"
-            android:windowSoftInputMode="adjustPan"
-            android:configChanges="orientation|screenSize|locale" />
+            android:screenOrientation="portrait"
+            android:parentActivityName=".MainActivity" />
         
         <!-- AppSelectActivity -->
         <activity
             android:name=".AppSelectActivity"
             android:exported="false"
-            android:configChanges="locale"
-            android:label="@string/app_selection" />
+            android:screenOrientation="portrait"
+            android:parentActivityName=".MainActivity" />
         
         <!-- Dịch vụ đèn pin -->
         <service
@@ -105,7 +104,17 @@
         </service>
         
         <!-- Receiver cho tin nhắn SMS -->
-        <receiver android:name=".receiver.SmsReceiver"
+        <receiver
+            android:name=".receiver.PhoneStateReceiver"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.PHONE_STATE" />
+            </intent-filter>
+        </receiver>
+        
+        <receiver 
+            android:name=".receiver.SMSReceiver"
             android:enabled="true"
             android:exported="true"
             android:permission="android.permission.BROADCAST_SMS">
