--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,10 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" android:minSdkVersion="33" />
     
+    <!-- Quyền internet cho quảng cáo -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    
     <application
         android:name=".FlashLightApp"
         android:allowBackup="true"
@@ -30,6 +34,30 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FlashLightAi"
         tools:targetApi="31">
+        
+        <!-- Cấu hình AdMob -->
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-3940256099942544~3347511713" />
+        
+        <!-- SplashActivity - Màn hình khởi động -->
+        <activity
+            android:name=".SplashActivity"
+            android:exported="true"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.FlashLightAi.SplashScreen">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        
+        <!-- IntroActivity - Màn hình giới thiệu cho người dùng lần đầu -->
+        <activity
+            android:name=".IntroActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.FlashLightAi" />
         
         <!-- MainActivity -->
         <activity
@@ -44,10 +72,6 @@
             android:name=".LanguageSelectionActivity"
             android:exported="true"
             android:screenOrientation="portrait">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         
         <!-- SettingsActivity -->
@@ -68,7 +92,7 @@
         <activity
             android:name=".textlight.TextLightActivity"
             android:exported="false"
-            android:screenOrientation="portrait"
+            android:configChanges="orientation|screenSize|keyboardHidden"
             android:parentActivityName=".MainActivity" />
         
         <!-- AppSelectActivity -->
